--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,78 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.mydiv {
+  padding: 15px 5px;
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
+  height: 5vh;
+  width: 100%;
+  margin: auto;
+}
+input {
+  padding: 0px 10px;
+  width: 100%;  
+  border: none;
+  outline: none;
+  background: none;
+}
+.left {
+  width: 30%;
+}
+.right {
+  width: 60%;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
-
-.App-link {
-  color: #61dafb;
+.last {
+  width: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.in {
+  width: 100%;
+  background-color: rgba(238, 238, 238, 0.5);
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  border-radius: 24px;
+  padding: 0px 10px;
+}
+button {
+  padding: 10px;
+  border: none;
+  outline: none;
+  background: none;
+}
+.galley {
+  width: 70%;
+  margin: auto;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.item {
+  margin: 10px;
+  width: 30%;
+}
+img {
+  width: 100%;
+}
+.logo {
+  height: 5vh;
+  object-fit: contain;
+}
+.left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.ic1 {
+  font-size: 18px;
+  padding-left: 20px;
 }
